# matrix-user-portal

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
frontend/: package.json  rollup.config.js  svelte.config.js
frontend/public/: global.css  index.html
frontend/src/: App.svelte
src/: db.rs  main.rs  state.rs  static_files.rs
